feat: add docker workflow

--- a/.env.example
+++ b/.env.example
@@ -1,13 +1,26 @@
 # Boxy Run Server Configuration
 
+# Server Environment
+NODE_ENV=production
+
+# Server Port
+# Default: 3000
+PORT=3000
+
 # Maximum number of players allowed per room
 # Default: 50
 # Examples: 10, 25, 50, 100
 MAX_PLAYERS=50
 
-# Server port
-# Default: 3000
-PORT=3000
+# Enable or disable room browser feature
+# Default: true
+ENABLE_ROOM_BROWSER=true
 
-# Server version (informational)
-VERSION=2.0.0
+# Room cleanup interval in milliseconds (5 minutes)
+# Default: 300000 (5 minutes)
+ROOM_CLEANUP_INTERVAL=300000
+
+# Docker Configuration (for Docker deployment)
+DOCKER_USERNAME=lcaohoanq
+VERSION=latest
+
