--- a/.github/workflows/docker-build-push.yml
+++ b/.github/workflows/docker-build-push.yml
@@ -25,6 +25,21 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: "18"
+          cache: "npm"
+
+      - name: Verify package-lock.json
+        run: |
+          if [ ! -f package-lock.json ]; then
+            echo "⚠️  package-lock.json not found, generating..."
+            npm install --package-lock-only
+          else
+            echo "✅ package-lock.json exists"
+          fi
+
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
 
@@ -53,6 +68,7 @@ jobs:
             type=raw,value=latest,enable={{is_default_branch}}
 
       - name: Build and push Docker image
+        id: docker_build
         uses: docker/build-push-action@v5
         with:
           context: .
@@ -64,12 +80,11 @@ jobs:
           cache-from: type=gha
           cache-to: type=gha,mode=max
           build-args: |
-            VERSION=${{ github.ref_name }}
-            BUILD_DATE=${{ github.event.head_commit.timestamp }}
-            GIT_COMMIT=${{ github.sha }}
+            NODE_ENV=production
 
       - name: Image digest
-        run: echo ${{ steps.docker_build.outputs.digest }}
+        if: github.event_name != 'pull_request'
+        run: echo "Image digest - ${{ steps.docker_build.outputs.digest }}"
 
       - name: Create GitHub Release (on tag)
         if: startsWith(github.ref, 'refs/tags/')
