--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
+    "prettier:check": "prettier --check . --cache",
+    "prettier:fix": "prettier --write . --cache",
     "test": "echo \"No tests specified\" && exit 0"
   },
   "keywords": [
@@ -20,6 +22,7 @@
   "license": "MIT",
   "dependencies": {
     "express": "^4.18.2",
+    "prettier": "^3.6.2",
     "socket.io": "^4.6.1"
   },
   "devDependencies": {
