--- a/.github/workflows/load-test.yml
+++ b/.github/workflows/load-test.yml
@@ -4,7 +4,7 @@ on:
   push:
     branches: [main, dev]
   pull_request:
-    branches: [main-test]
+    branches: [main-test, main]
 
 jobs:
   load-test:
