--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "boxy-run-multiplayer",
-  "version": "2.0.0",
-  "description": "A Three.js Temple Run inspired game with multiplayer racing support",
+  "name": "history-sufers",
+  "version": "1.0.0",
+  "description": "A Three.js Subway surfer inspired game with multiplayer racing support",
   "main": "server.js",
   "type": "module",
   "scripts": {
@@ -23,7 +23,7 @@
     "racing",
     "temple-run"
   ],
-  "author": "lcaohoanq (Enhanced with Multiplayer)",
+  "author": "lcaohoanq",
   "license": "MIT",
   "dependencies": {
     "express": "^4.18.2",
@@ -32,10 +32,8 @@
   },
   "devDependencies": {
     "nodemon": "^3.0.1",
-    "mocha": "^10.2.0",
     "chai": "^4.3.7",
-    "socket.io-client": "^4.6.1",
-    "nyc": "^15.1.0"
+    "socket.io-client": "^4.6.1"
   },
   "engines": {
     "node": ">=14.0.0"
