--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
+    "start:old": "node server.js",
     "prettier:check": "prettier --check . --cache",
     "prettier:fix": "prettier --write . --cache",
     "test": "mocha test/server.test.js --exit",
@@ -19,21 +20,24 @@
     "game",
     "threejs",
     "multiplayer",
-    "websocket",
+    "colyseus",
     "racing",
     "temple-run"
   ],
   "author": "lcaohoanq",
   "license": "MIT",
   "dependencies": {
+    "@colyseus/monitor": "^0.15.0",
+    "@colyseus/schema": "^2.0.0",
+    "colyseus": "^0.15.0",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
-    "prettier": "^3.6.2",
-    "socket.io": "^4.6.1"
+    "prettier": "^3.6.2"
   },
   "devDependencies": {
-    "nodemon": "^3.0.1",
     "chai": "^4.3.7",
-    "socket.io-client": "^4.6.1"
+    "colyseus.js": "^0.15.0",
+    "nodemon": "^3.0.1"
   },
   "engines": {
     "node": ">=14.0.0"
