--- a/.github/workflows/load-test.yml
+++ b/.github/workflows/load-test.yml
@@ -1,10 +1,8 @@
 name: Load Test
 
 on:
-  push:
-    branches: [main, dev]
   pull_request:
-    branches: [main-test, main]
+    branches: [main-test]
 
 jobs:
   load-test:
